--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">ProiectAtestat</string>
-    <string name="title_activity_maps">Proiect Atestat</string>
+    <string name="app_name">EQ Tracker</string>
+    <string name="title_activity_maps">EQ Tracker</string>
     <string name="earthquake_list">Earthquake List</string>
     <string name="settings">Settings</string>
 </resources>
