--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_maps">EQ Tracker</string>
     <string name="earthquake_list">Earthquake List</string>
     <string name="settings">Settings</string>
+    <string name="refresh">Refresh</string>
 </resources>
